<resources>
    <string name="app_name">Voice Calci</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_div">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_multipy">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_subtract">-</string>
    <string name="_dot">.</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="_add">+</string>
    <string name="todo">TODO</string>
    <string name="speech_prompt" />
    <string name="speech_not_supported" />
    <string name="speak_here">10 + 10</string>
    <string name="result">20</string>
</resources>